<resources>
  <string name="app_name">GitHub</string>
  <string name="title_activity_main">MainActivity</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="query_hint">Search Repositories,Codes,Issues,Users</string>
  <string name="repositories">Repositories</string>
  <string name="code">Code</string>
  <string name="Issues">Issues</string>
  <string name="users">Users</string>
  <string name="best_match">Best Match</string>
  <string name="all_language">All Language</string>
  <string name="follow">+ Follow</string>
  <string name="title_activity_login">Sign in</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Username or email address</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
  <string name="issue">Issues</string>
  <string name="pull_request">Pull requests</string>
  <string name="branch">Branch</string>


  <string name="bottom_sheet">Bottom sheet</string>
  <string name="bottomsheet_persistent">Persistent</string>
  <string name="bottomsheet_hideable">Hideable</string>
  <string name="bottomsheet_scroll">With ScrollView</string>
  <string name="bottomsheet_with_fragment">With Fragment</string>
  <string name="bottomsheet_modal">Modal</string>
  <string name="bottomsheet_hide">Hide</string>
  <string name="bottomsheet_show">Show</string>
  <string name="item_n">Item %d</string>
  <string name="readme_md">README.MD</string>
  <string name="overview">Overview</string>
  <string name="format_comment_count">· %1d comments</string>
  <string name="opened_this_issue">opened this issue</string>
  <string name="create_at">create at</string>
  <string name="watch">Watch</string>
  <string name="Star">Star</string>
  <string name="Fork">Fork</string>
  <string name="events">Events</string>
  <string name="starts">Starts</string>
  <string name="followers">Followers</string>
  <string name="following">Following</string>
  <string name="sign_in_to_github">Sign in to GitHub</string>
  <string name="error_404">Required Auth.Nav to login</string>
  <string name="signing_in">Signing in &#8230;</string>
  <string name="error_incorrect_field">Incorrect username or password.</string>
  <string name="nav_sign_out">Sign Out</string>
  <string name="follower">Follower</string>


  <!--welcome page-->
  <!--page1-->
  <string name="welcome_title">Welcome home, developers</string>
  <string name="welcome_content">GitHub fosters a fast, flexible, and collaborative development process that lets you work on your own or with others.</string>

  <!--page2-->
  <string name="welcome_build_title">For everything you build</string>
  <string name="welcome_build_content">Host and manage your code on GitHub. You can keep your work private or share it with the world.</string>
  <!--page3-->
  <string name="welcome_work_title">A better way to work</string>
  <string name="welcome_work_content">From hobbyists to professionals, GitHub helps developers simplify the way they build software.</string>
  <!--page4-->
  <string name="welcome_projects_title">Millions of projects</string>
  <string name="welcome_projects_content">GitHub is home to millions of open source projects. Try one out or get inspired to create your own.</string>
  <!--page5-->
  <string name="welcome_platform_title">One platform, from start to finish</string>
  <string name="welcome_platform_content">With hundreds of integrations, GitHub is flexible enough to be at the center of your development process.</string>
  <string name="version">Version:%s</string>
  <string name="private_repo">Private</string>
  <string name="unstart">Unstart</string>

</resources>
